<resources>
    <string name="app_name">Olx</string>
    <string name="olx">OLX</string>
    <string name="leading">India\'s Leading\n Market Place</string>
    <string name="continue_with_google">Continue With google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="conditions">If you are accepting\n OLX Terms and Conditionns and Privacy Policy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="my_ads">My Ads</string>
    <string name="sell">Sell</string>
    <string name="cars_mobile">Buy Cars,Mobile and more....</string>
    <string name="browse_categories">Browse Categories</string>
    <string name="what_are_you_offering">What are you offering?</string>
    <string name="brand">(Write full Brand name with model Name)*</string>
    <string name="mention_the_key_features_of_your_item_e_g_brand_model_age_type">Mention the key features of your item</string>
    <string name="include_the_condition_features_and_reason_for_sale">Include the condition features and reason for sale</string>
    <string name="describe_the_product">Describe the product *</string>
    <string name="km_driven">KM Driven *</string>
    <string name="year">Purchase Year *</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="_100_00">$ 100.00</string>
    <string name="phase_6_mohali_sector_56">Phase 6 Mohali Sector 56</string>
    <string name="suv">SUV</string>
    <string name="_25_dec">25 DEC</string>
    <string name="details">Details</string>
    <string name="description">Description</string>
    <string name="phone">Phone</string>
    <string name="version_1_0">version 1.0</string>
    <string name="you_havent_t_list_anything">You havent\'t Post Anything</string>
    <string name="let_s_go">Let\'s go</string>
    <string name="north_office_para_ranchi">North Office Para,Ranchi</string>
    <string name="_10_00_000">₹ 10,00,000</string>
    <string name="redmi_poco_f1">Redmi Poco F1</string>
    <string name="total_item_in_cart_is_10">Total Item in Cart is 10</string>
    <string name="total_cost_is_1000">Total Cost is :1000</string>
    <string name="user_name">User Name</string>
    <string name="billing_section">Billing Section</string>
    <string name="proceed_for_payment">Proceed For payment</string>
    <string name="status_ordered">Status: Ordered</string>
    <string name="no_order_received_yet">No Order received Yet</string>
    <string name="you_haven_t_order_yet_anything">You Haven\'t order Yet</string>

</resources>